Create css grid fundamentals

--- a/03 - CSS Grid Fundamentals/css-grid-fundamentals.html
+++ b/03 - CSS Grid Fundamentals/css-grid-fundamentals.html
@@ -21,12 +21,13 @@
     <div class="item">9</div>
     <div class="item">10</div>
   </div>
+
   <style>
     .container {
       display: grid;
-      grid-template-columns: 200px 500px;
-      grid-template-rows: 200px 100px 400px;
-      grid-gap: 20px;
+      grid-template-columns: 100px 60px 5%;
+      grid-template-rows: repeat(5, 60px);
+      grid-gap: 10px;
     }
   </style>
 </body>
