--- a/10 - Placing Grid Items/placing-START.html
+++ b/10 - Placing Grid Items/placing-START.html
@@ -18,14 +18,14 @@
     <div class="item item6">6</div>
     <div class="item item7">7</div>
     <div class="item item8">8</div>
-    <div class="item item8">💩</div>
+    <div class="item move-me">Give me a width of 100%</div>
     <div class="item item9">9</div>
     <div class="item item10">10</div>
     <div class="item item11">11</div>
     <div class="item item12">12</div>
     <div class="item item13">13</div>
     <div class="item item14">14</div>
-    <div class="item item15">15</div>
+    <div class="item move-vert">15</div>
     <div class="item item16">16</div>
     <div class="item item17">17</div>
     <div class="item item18">18</div>
@@ -49,6 +49,17 @@
       grid-gap: 20px;
       grid-template-columns: repeat(5, 1fr);
     }
+
+    .move-me {
+      grid-column: 1 / -1;
+      background: #BADA55;
+    }
+
+    .move-vert {
+      grid-row: 5 / span 2;
+      grid-column: 2 / 5;
+    }
+
   </style>
 </body>
 
