--- a/13 - Using minmax() for Responsive Grids/minmax-START.html
+++ b/13 - Using minmax() for Responsive Grids/minmax-START.html
@@ -21,8 +21,10 @@
       display: grid;
       grid-gap: 20px;
       border: 10px solid var(--yellow);
-      grid-template-columns: repeat(auto-fit, 150px);
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      /*grid-template-columns: fit-content(150px) 1fr 1fr 1fr;*/
     }
+
   </style>
 </body>
 
