Center and Align elements in css grid using justifyand align-items|-content|-self

--- a/16 - grid-auto-flow dense Block Fitting/dense-START.html
+++ b/16 - grid-auto-flow dense Block Fitting/dense-START.html
@@ -86,7 +86,20 @@
     .container {
       display: grid;
       grid-gap: 20px;
+      grid-template-columns: repeat(10, 1fr);
+      grid-auto-flow: dense;
     }
+
+    .item:nth-child(6n) {
+      background: aliceblue;
+      grid-column: span 6;
+    }
+
+    .item48 {
+      background: red !important;
+      grid-column-end: -1 !important;
+    }
+
   </style>
 </body>
 
