--- a/20 - CSS Grid Image Gallery/image-gallery.html
+++ b/20 - CSS Grid Image Gallery/image-gallery.html
@@ -14,6 +14,7 @@
     <div class="overlay-inner">
       <button class="close">× Close</button>
       <img>
+      <img src="" alt="">
     </div>
   </div>
 
@@ -82,6 +83,35 @@
   </style>
 
   <script>
+    const gallery = document.querySelector(`.gallery`);
+    const overlay = document.querySelector(`.overlay`);
+    const overlayImage = overlay.querySelector(`img`);
+    const overlayClose = overlay.querySelector(`.close`);
+
+    function generateHTML([h, v]) {
+      return `
+      <div>
+        <img src='images/${randomNum(12)}.jpg' class='item h${h} v${v}'/>
+        <div class='item__overlay'>
+          <button>View &#65515</button>
+        </div>
+      </div>
+      `;
+    }
+
+    function randomNum(limit) {
+      return Math.floor(Math.random() * limit + 1)
+    }
+
+    // 1. create empty array of length 50 with 50 different couples
+    const digits = Array.from({length: 50}, () =>
+      [randomNum(4), randomNum(4)]);
+    // 2. display generation of images in gallery
+    const html = digits.map(generateHTML).join('');
+    gallery.innerHTML = html;
+
+
+
   </script>
 </body>
 
