--- a/21 - Flexbox vs CSS Grid/axis-flipping.html
+++ b/21 - Flexbox vs CSS Grid/axis-flipping.html
@@ -35,6 +35,17 @@
   </div>
 
   <style>
+
+  .flipper {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+  }
+
+  .flip {
+    grid-template-columns: 1fr 1fr;
+  }
+
   </style>
 </body>
 
