Style codepen header and buttons

--- a/22 - Recreating Codepen/codepen-START.html
+++ b/22 - Recreating Codepen/codepen-START.html
@@ -12,11 +12,11 @@
   <div class="codepen">
     <header class="pen">
       <div class="pen__details">
-        <h1>Some Amazing Pen Name</h1>
+        <h1>Recreate Codepen</h1>
         <p class="pen__author">A Pen by Flo</p>
       </div>
-      <button class="button button--dirty">☁️ Save</button>
-      <button class="button">️️☁️ Save As Private</button>
+      <button class="button button-action">⚙ Run</button>
+      <button class="button button-action">⚙ Fork</button>
       <button class="button">⚙ Settings</button>
       <button class="button">👀 Change View</button>
       <img src="../assets/images/flo-pic.jpg" alt="Flo" height="44">
